--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body id="backgroundBody">
      <div id="textBody">
-         <hl style="font-size: 160px;">Son Osmanli</hl>
+         <hl style="font-size: 150px;">Son Osmanli</hl>
          <p style="font-size: 80px;"> Cs:go Jailbreak Server </font-size:160></p>
          <div>
              <a href="https://www.instagram.com/denizemre959/" class="fa fa-instagram" target="_blank" rel="noop-ener noreferrer"></a>
-             <a href="https://discord.gg/pp5bR6Gn" class="fa fa-linkedin" target="_blank" rel="noop-ener noreferrer"></a>
-             <a href="https://steamcommunity.com/groups/SnOsmanli" class="fa fa-steam" -target="_blank" rel="noop-ener noreferrer"></a>
+             <a href="https://discord.gg/pp5bR6Gn" class= "fa fa-comments"target="_blank" rel="noop-ener noreferrer"></a>
+             <a href="https://steamcommunity.com/groups/SnOsmanli" class="fa fa-steam" target="_blank" rel="noop-ener noreferrer"></a>
+             <a href="https://www.shopier.com/SonOsmanliJailbreakMarket" class="fa fa-shopping-cart" target="_blank" rel="noop-ener noreferrer"></a>
          </div>
 
 
