--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          <p style="font-size: 80px;"> Cs:go Jailbreak Server </font-size:160></p>
          <div>
              <a href="https://www.instagram.com/denizemre959/" class="fa fa-instagram" target="_blank" rel="noop-ener noreferrer"></a>
+             <a href="https://www.instagram.com/sonosmanlijailbreak/" class="fa fa-instagram" target="_blank" rel="noop-ener noreferrer"></a>
              <a href="https://discord.gg/pp5bR6Gn" class= "fa fa-comments"target="_blank" rel="noop-ener noreferrer"></a>
              <a href="https://steamcommunity.com/groups/SnOsmanli" class="fa fa-steam" target="_blank" rel="noop-ener noreferrer"></a>
              <a href="https://www.shopier.com/SonOsmanliJailbreakMarket" class="fa fa-shopping-cart" target="_blank" rel="noop-ener noreferrer"></a>
